got docker compose environment to work

--- a/.github/workflows/build_and_release_image_pytest.yaml
+++ b/.github/workflows/build_and_release_image_pytest.yaml
@@ -8,7 +8,7 @@ jobs:
     uses: Cray-HPE/hms-build-image-workflows/.github/workflows/build_and_release_image.yaml@feature/CASMHMS-5374
     with:
       image-name: hms-pytest
-      docker-build-file: Dockerfile.hms-pytest
+      docker-build-file: Dockerfile.hms-pytest.Dockerfile
       enable-pr-comment: true
     secrets:
       artifactory-username: ${{ secrets.ARTIFACTORY_ALGOL60_USERNAME }}
