--- a/.github/workflows/build_and_release_image_pytest.yaml
+++ b/.github/workflows/build_and_release_image_pytest.yaml
@@ -5,7 +5,7 @@ on:
   - workflow_dispatch
 jobs:
   build_and_release:
-    uses: Cray-HPE/hms-build-image-workflows/.github/workflows/build_and_release_image.yaml@feature/CASMHMS-5374
+    uses: Cray-HPE/hms-build-image-workflows/.github/workflows/build_and_release_image.yaml@v1
     with:
       image-name: hms-pytest
       docker-build-file: Dockerfile.hms-pytest.Dockerfile
