--- a/libs/tavern_global_config.yaml
+++ b/libs/tavern_global_config.yaml
@@ -1,11 +1,11 @@
-# This file contains the base common configurations for running pytest tavern tests.  It is statically generated,
+# This file contains the base common configurations for running pytest tavern tests in a production environment.  It is statically generated,
 #  because we anticipate the same settings for all ct-test  containers that inherit from it.
 name: tavern_global_configuration #is this needed, used?
 description: common configuration for all tavern invocations
 variables:
   verify: false #should ssl verification happen in tavern tests? its hard coded everywhere to false (partially because the PIT would complain)
-  hsm_base_url: http://cray-smd:27779 #todo do these need ports? are these paths correct?
-  fas_base_url: http://cray-fas:28800 #todo do these need ports? are these paths correct?
+  hsm_base_url: http://cray-smd
+  fas_base_url: http://cray-fas
   bss_base_url: todo #todo
   capmc_base_url: todo #todo
   hmcollector_base_url: todo #todo
