--- a/libs/tavern_global_config.yaml
+++ b/libs/tavern_global_config.yaml
@@ -1,14 +1,14 @@
-# This file contains the base common configurations for running pytest tavern tests in a production environment.  It is statically generated,
-#  because we anticipate the same settings for all ct-test  containers that inherit from it.
-name: tavern_global_configuration #is this needed, used?
+# This file contains the base common configurations for running pytest tavern tests in a production environment.
+# It is statically generated because we anticipate the same settings for all CT test containers that inherit from it.
+name: tavern_global_configuration
 description: common configuration for all tavern invocations
 variables:
-  verify: false #should ssl verification happen in tavern tests? its hard coded everywhere to false (partially because the PIT would complain)
+  verify: false
   hsm_base_url: http://cray-smd
   fas_base_url: http://cray-fas
   bss_base_url: http://cray-bss
   capmc_base_url: http://cray-capmc
-  hmcollector_base_url: todo #todo
+  hmcollector_base_url: TODO #TODO
   hmnfd_base_url: http://cray-hmnfd
   hbtd_base_url: http://cray-hbtd
   scsd_base_url: http://cray-scsd
