--- a/libs/tavern_global_config_integration_test.yaml
+++ b/libs/tavern_global_config_integration_test.yaml
@@ -1,7 +1,7 @@
-# This file contains the base common configurations for running pytest tavern tests.  It is statically generated,
-#  because we anticipate the same settings for all ct-test  containers that inherit from it.
-name: tavern_global_configuration #is this needed, used?
+# This file contains the base common configurations for running pytest tavern tests. It is statically
+# generated because we anticipate the same settings for all CT test containers that inherit from it.
+name: tavern_global_config_integration_test
 description: common configuration for all tavern invocations
 variables:
-  verify: false #should ssl verification happen in tavern tests? its hard coded everywhere to false (partially because the PIT would complain)
-  base_url: http://httpbin
+  verify: false
+  base_url: http://httpbin.org/
