--- a/libs/pytest.ini
+++ b/libs/pytest.ini
@@ -3,3 +3,5 @@ filterwarnings =
     ignore::FutureWarning
     ignore::DeprecationWarning
     ignore::urllib3.exceptions.InsecureRequestWarning
+log_cli = true
+log_cli_level = DEBUG
