CASMHMS-6408: DEBUG -> INFO

--- a/libs/pytest.ini
+++ b/libs/pytest.ini
@@ -4,4 +4,4 @@ filterwarnings =
     ignore::DeprecationWarning
     ignore::urllib3.exceptions.InsecureRequestWarning
 log_cli = true
-log_cli_level = DEBUG
+log_cli_level = INFO
